--- a/week1/hello.html
+++ b/week1/hello.html
@@ -1,10 +1,10 @@
-<docType html>
+<!DOCTYPE html>
 	<html lang="en">
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>Hello World!</title>
 		<style type="text/css" media="screen">
-		h1 {font-family: Helvetica}
+		h1 {font-family: impact}
 		</style>
 		</head>
 		<body>
