Final Project_Last Minute Fixes
Made some last minute changes

--- a/week12/project_boilerplate/aboutme.html
+++ b/week12/project_boilerplate/aboutme.html
@@ -63,7 +63,7 @@
 			<section id="generalinfo">
 				<h3 style="margin-left: 70px;">A Little About Myself</h3>
 				<img class= "pic" style= "float:right; margin-left: 30px;" src="img/Thumbnails/Joe_w_Erin.jpg">
-				<p id="generalInfo">My name is Joseph Leroy Beaubien Jr, and I am a recent graduate of Michigan State University. My main interest is game design and art development. I live in East Lansing, were I also work for Media Services as a student worker. My main interests are game design and development, and art of any medium. I come from a small town in Michigan called Hudson, but I live in the East Lansing area(Michigan). </p>
+				<p id="generalInfo">My name is Joseph Leroy Beaubien Jr, and I am a recent graduate of Michigan State University. My main interest is game design and art development. I live in East Lansing, where I also work for Media Services as a student worker. My main interests are game design and development, and art of any medium. I come from a small town in Michigan called Hudson. </p>
 			</section>
 			
 			<div id= "wrapper"> </div>
